--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,15 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+body,
 .App {
+  height: 100vh;
+}
+
+a {
+  text-decoration: none;
 }
