--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,5 +1,5 @@
 .card {
-  background-color: white;
+  background-color: transparent;
   border: none;
   border-radius: 8px;
   width: 100%; /* Adjust width as needed */
@@ -47,6 +47,7 @@
   justify-content: center;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+  margin: 0;
 }
 
 .card-title p {
@@ -61,4 +62,8 @@
 
 .input-title-with-placeholder::placeholder {
   color: white;
+}
+
+.hidden-but-occupy-space {
+  visibility: hidden;
 }
