--- a/src/components/DesignGrid/DesignGrid.css
+++ b/src/components/DesignGrid/DesignGrid.css
@@ -13,7 +13,7 @@
   margin: 10px;
   padding: 0;
   border-radius: 16px;
-  background-color: red;
+  background-color: white;
 }
 .small {
   grid-row-end: span 26;
