--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -6,8 +6,9 @@
 
 .search-bar {
   width: 100%; /* 원하는 너비로 조정 */
-  padding: 10px;
-  border: 2px solid #ccc;
+  padding: 8px 16px 8px 16px;
+  height: 40px;
+  border: 3px solid #ccc;
   border-radius: 50px; /* 라운드 디자인 */
 }
 
@@ -15,12 +16,19 @@
   width: 200px;
   border: none;
   outline: none;
+  font-size: 14px;
 }
 
 .search-button {
+  display: flex;
+  align-items: center;
   background-color: white;
   border: 2px solid #ccc;
   cursor: pointer;
-  color: #333;
+  color: #ccc;
   border: none;
+}
+
+.search-button:hover {
+  color: black;
 }
