--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -1,6 +1,7 @@
 .Sidebar {
   height: 100%;
   min-width: 260px;
+  max-width: 260px;
   background-color: #2f4050;
   transition: 0.2s ease-in-out;
   opacity: 1;
