--- a/src/pages/WeRo.css
+++ b/src/pages/WeRo.css
@@ -1,11 +1,23 @@
+@font-face {
+  font-family: "Cantarell-Bold";
+  src: url("../fonts/Cantarell-Bold.ttf") format("truetype");
+}
+
 .add-icon {
-  color: #ccc;
-  font-size: 35px;
+  color: black;
+  font-size: 15px;
+  text-decoration: none;
 }
 
 .add-icon:hover {
+  color: #ccc;
+}
+
+.home-btn {
+  font-family: "Cantarell-Bold";
+  font-size: 30px;
+  text-decoration: none;
   color: black;
-  font-size: 35px;
 }
 
 .center-message {
@@ -16,22 +28,4 @@
   font-size: 1.5rem; /* 글씨 크기를 조정 */
   color: #555; /* 글씨 색상을 조정 */
   font-family: Arial, sans-serif; /* 글꼴 지정 */
-}
-
-.loading-spinner {
-  border: 5px solid #f3f3f3; /* Light grey */
-  border-top: 5px solid #3498db; /* Blue */
-  border-radius: 50%;
-  width: 25px;
-  height: 25px;
-  animation: spin 2s linear infinite;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
 }
