--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -13,13 +13,77 @@
   outline: none;
   padding: 20px;
   width: 500px;
-  height: 600px;
+  height: 700px;
   position: fixed; /* 추가: CSS에서 위치를 조정하기 위해 필요 */
   z-index: 1000; /* 추가: 오버레이 위에 내용이 나타나도록 z-index 설정 */
 }
 
+.confirm-modal-content {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 220px;
+  height: 120px;
+  padding: 10px;
+  border-radius: 15px;
+  background: white;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* 그림자 추가 */
+  overflow: auto;
+  border-radius: 12px;
+  outline: none;
+  position: fixed;
+  z-index: 1100;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.confirm-modal-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 10px; /* 버튼 사이 간격 */
+  margin-top: auto;
+}
+
+.confirm-modal-content h5 {
+  margin: auto;
+  text-align: center;
+  font-size: 18px;
+}
+
+.confirm-modal-content .btn {
+  border: none;
+  border-radius: 6px;
+  background-color: #3f5060;
+  color: white;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.confirm-modal-content .btn:hover {
+  background-color: #6c757d;
+}
+
+.confirm-modal-content .btn.cancel {
+  background-color: #3f5060;
+}
+
+.confirm-modal-content .btn.cancel:hover {
+  background-color: #5a6268;
+}
+
 .modal-overlay {
   background-color: rgba(0, 0, 0, 0.75);
+  position: fixed; /* 전체 화면을 덮기 위해 필요 */
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 999; /* 내용보다 낮게 설정하여 오버레이가 뒤에 위치하도록 함 */
+}
+
+.confirm-modal-overlay {
+  background-color: transparent;
   position: fixed; /* 전체 화면을 덮기 위해 필요 */
   top: 0;
   left: 0;
@@ -57,4 +121,92 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+
+.modal-header {
+  display: flex;
+  flex-direction: row;
+}
+
+.modal-header-btn {
+  display: flex;
+  justify-content: space-evenly;
+  width: 60%;
+}
+
+.color-palette-dropdown,
+.emotion-palette-dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.palette-toggle-button {
+  background-color: transparent;
+  text-align: center;
+  width: 70px;
+  color: black;
+  border: none;
+  padding: 4px 8px;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 14px;
+}
+
+.palette-read {
+  background-color: transparent;
+  width: 70px;
+  color: black;
+  border: none;
+  padding: 4px 8px;
+  border-radius: 5px;
+  font-size: 14px;
+  outline: none;
+  text-align: center;
+}
+
+.palette-toggle-button:hover {
+  background-color: #ccc;
+  color: white;
+}
+
+.color-palette,
+.emotion-palette {
+  display: flex;
+  flex-wrap: wrap;
+  width: 160px; /* Adjust as needed */
+  padding: 10px;
+  border: 1px solid #ccc;
+  background: white;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 1001;
+  border-radius: 5px;
+}
+
+.color-option {
+  width: 30px;
+  height: 30px;
+  margin: 5px;
+  cursor: pointer;
+  border-radius: 50%;
+  border: 2px solid transparent;
+  transition: border-color 0.3s ease;
+}
+
+.emotion-option {
+  width: auto;
+  height: 30px;
+  margin: 5px;
+  padding: 2px;
+  cursor: pointer;
+  border: 2px solid transparent;
+  border-radius: 5px;
+  transition: border-color;
+}
+
+.color-option:hover,
+.emotion-option:hover {
+  border-color: #555;
 }
