--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -8,7 +8,7 @@
   width: 100%; /* 원하는 너비로 조정 */
   padding: 8px 16px 8px 16px;
   height: 40px;
-  border: 3px solid #ccc;
+  border: 1px solid black;
   border-radius: 50px; /* 라운드 디자인 */
 }
 
@@ -23,12 +23,11 @@
   display: flex;
   align-items: center;
   background-color: white;
-  border: 2px solid #ccc;
   cursor: pointer;
-  color: #ccc;
+  color: black;
   border: none;
 }
 
 .search-button:hover {
-  color: black;
+  color: #ccc;
 }
