--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -14,7 +14,9 @@
   flex-direction: column;
   height: 100%;
   border: none;
-  border-radius: 10px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  background-color: transparent;
 }
 
 .card-header-diary {
@@ -29,7 +31,7 @@
 .card-content {
   display: flex;
   font-size: 1.2rem; /* Adjust font-size as needed */
-  height: 100%;
+  height: 80%;
   align-items: center;
   justify-content: center;
 }
@@ -56,26 +58,49 @@
 .card-title {
   display: flex;
   height: 20%;
-  background: #2f4050;
   align-items: center;
   justify-content: center;
   border: none;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  background-color: rgba(255, 255, 255, 0.6);
   margin: 0;
 }
 
 .card-title p {
   font-size: 1rem; /* Adjust font-size as needed */
   margin: 0;
-  color: white;
+  color: black;
 }
 
 .input-content-with-placeholder {
   font-size: 1rem;
   border: none;
-  background-color: lightgrey;
-  color: white;
+  background-color: rgba(255, 255, 255, 0.6);
+  color: black;
+  outline: none;
+  padding: 4px 8px;
+  text-align: center;
+  height: auto;
+}
+
+.input-content-with-placeholder-diary {
+  font-size: 1rem;
+  border: none;
+  color: black;
+  outline: none;
+  padding: 4px 8px;
+  background-color: rgba(255, 255, 255, 0.5);
+  color: black;
+  text-align: center;
+  height: auto;
+}
+
+.input-title-with-placeholder-diary {
+  font-size: 1rem;
+  border: none;
+  color: black;
+  background-color: transparent;
   outline: none;
   padding: 4px 8px;
   text-align: center;
@@ -85,8 +110,8 @@
 .input-content-with-placeholder-read {
   font-size: 1rem;
   border: none;
-  background-color: lightgrey;
-  color: white;
+  background-color: rgba(255, 255, 255, 0.6);
+  color: black;
   outline: none;
   padding: 4px 8px;
   text-align: center;
@@ -94,13 +119,39 @@
   cursor: pointer;
 }
 
-.input-content-with-placeholder::placeholder {
-  color: white;
-  background-color: lightgrey;
+.input-content-with-placeholder-diary-read {
+  font-size: 1rem;
+  border: none;
+  color: black;
+  outline: none;
+  padding: 4px 8px;
+  background-color: rgba(255, 255, 255, 0.6);
+  color: black;
+  text-align: center;
+  height: auto;
+  cursor: pointer;
 }
 
-.input-title-with-placeholder::placeholder {
-  color: white;
+.input-title-with-placeholder-diary-read {
+  font-size: 1rem;
+  border: none;
+  color: black;
+  outline: none;
+  background-color: transparent;
+  padding: 4px 8px;
+  color: black;
+  text-align: center;
+  height: auto;
+  cursor: pointer;
+}
+
+.input-content-with-placeholder::placeholder {
+  color: black;
+}
+
+.input-content-with-placeholder-diary::placeholder,
+.input-title-with-placeholder-diary::placeholder {
+  color: black;
 }
 
 .hidden-but-occupy-space {
