--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -16,6 +16,9 @@
   height: 700px;
   position: fixed; /* 추가: CSS에서 위치를 조정하기 위해 필요 */
   z-index: 1000; /* 추가: 오버레이 위에 내용이 나타나도록 z-index 설정 */
+  transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+  opacity: 0;
+  transform: translate(-50%, -45%);
 }
 
 .confirm-modal-content {
@@ -37,6 +40,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+  opacity: 0;
+  transform: translate(-50%, -45%);
 }
 .confirm-modal-buttons {
   display: flex;
@@ -80,6 +86,7 @@
   right: 0;
   bottom: 0;
   z-index: 999; /* 내용보다 낮게 설정하여 오버레이가 뒤에 위치하도록 함 */
+  transition: opacity 0.5s ease-in-out;
 }
 
 .confirm-modal-overlay {
@@ -90,6 +97,7 @@
   right: 0;
   bottom: 0;
   z-index: 999; /* 내용보다 낮게 설정하여 오버레이가 뒤에 위치하도록 함 */
+  transition: opacity 0.5s ease-in-out;
 }
 
 .modal-header {
@@ -209,4 +217,22 @@
 .color-option:hover,
 .emotion-option:hover {
   border-color: #555;
+}
+
+.ReactModal__Overlay--after-open {
+  opacity: 1;
+}
+
+.ReactModal__Content--after-open {
+  opacity: 1;
+  transform: translate(-50%, -50%);
+}
+
+.ReactModal__Overlay--before-close {
+  opacity: 0;
+}
+
+.ReactModal__Content--before-close {
+  opacity: 0;
+  transform: translate(-50%, -45%);
 }
