--- a/src/components/MyPageEdit/MyPageEdit.css
+++ b/src/components/MyPageEdit/MyPageEdit.css
@@ -13,6 +13,22 @@
   margin-bottom: 40px;
 }
 
+.mypage-edit-error-message {
+  margin-top: 5px;
+  color: red;
+  font-size: 12px;
+  padding-left: 10px;
+  margin-right: 180px;
+}
+
+.mypage-edit-success-message {
+  margin-top: 5px;
+  color: blue;
+  font-size: 12px;
+  padding-left: 10px;
+  margin-right: 180px;
+}
+
 .mypage-edit-form {
   width: 100%;
   height: 100%;
@@ -26,13 +42,12 @@
 
 .mypage-edit-inputbox {
   width: 100%;
-  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .mypage-edit-input-label {
   width: 20%;
   display: flex;
-
   align-items: center;
   padding: 10px;
 }
