--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -82,6 +82,7 @@
   padding: 4px 8px;
   text-align: center;
   height: auto;
+  resize: none;
 }
 
 .input-content-with-placeholder-diary {
@@ -94,6 +95,7 @@
   color: black;
   text-align: center;
   height: auto;
+  resize: none;
 }
 
 .input-title-with-placeholder-diary {
@@ -105,6 +107,7 @@
   padding: 4px 8px;
   text-align: center;
   height: auto;
+  resize: none;
 }
 
 .input-content-with-placeholder-read {
