--- a/src/components/Signup/Signup.css
+++ b/src/components/Signup/Signup.css
@@ -1,6 +1,6 @@
 .signup-wrapper {
   width: 500px;
-  height: auto;
+  height: 900px;
   border: 1px solid #aacdff;
   box-shadow: 7px 7px 39px rgba(0, 104, 255, 0.25);
   border-radius: 20px;
@@ -11,6 +11,7 @@
   padding: 20px;
   margin-top: 50px;
   margin-bottom: 50px;
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .error-message {
